[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hdfilm-dl"
version = "0.1.0"
description = "CLI tool to download videos from hdfilmcehennemi.nl"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
keywords = ["video", "downloader", "hdfilmcehennemi"]
dependencies = [
    "httpx>=0.27.0",
    "click>=8.1.0",
    "yt-dlp>=2024.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "rich>=13.0.0",
]

[project.urls]
Homepage = "https://github.com/legendsciber/hdfilm-dl"
Repository = "https://github.com/legendsciber/hdfilm-dl"

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]

[project.scripts]
hdfilm-dl = "hdfilm_dl.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hdfilm_dl"]
